<resources>
    <string name="AboutWord">About</string>
    <string name="AccountCreationFloodcheck">You have made too many accounts. Please wait before making more.</string>
    <string name="AdColonyAppId">appe0b7456ae2e249ed91</string>
    <string name="AdColonyZoneId">vz80b7495faabe44d4b2</string>
    <string name="AndWord">And</string>
    <string name="AnyUserNeedsToSignIn">Please login to complete the pending transaction. If this problem persists contact info@skyblox.co</string>
    <string name="AppPurchasingDisabledTitle">In-App Purchasing disabled</string>
    <string name="Banned14Day">Banned for 14 Days</string>
    <string name="Banned1Day">Banned for 1 Day</string>
    <string name="Banned3Day">Banned for 3 Days</string>
    <string name="Banned7Day">Banned for 7 Days</string>
    <string name="BannedAppeals">If you wish to appeal, please send an email to &lt;a href=\"mailto:appeals@skyblox.co?Subject=Ban%20Appeal\">appeals@skyblox.co&lt;/a>.</string>
    <string name="BannedDefault">Account Unavailable</string>
    <string name="BannedDelete">Account Deleted</string>
    <string name="BannedDeletedFirstLine">Our content monitors have determined that your behavior at SKYBLOX has been in violation of our Terms of Service.</string>
    <string name="BannedDeletedMessage">Your account has been terminated.</string>
    <string name="BannedFirstLine">Our content monitors have determined that your behavior at SKYBLOX has been in violation of our Terms of Service. We will terminate your account if you do not abide by the rules.</string>
    <string name="BannedGuidelines">Please abide by the &lt;a href=\"https://en.help.skyblox.co/hc/en-us/articles/203313410-SKYBLOX-Rules-of-Conduct\">SKYBLOX Community Guidelines&lt;/a> so that SKYBLOX can be fun for users of all ages.</string>
    <string name="BannedLengthAndEndDate">Your account has been banned for %1$d days. You may reactive it after %2$s.</string>
    <string name="BannedMessagePermanent">You have been banned from SKYBLOX permanently. Please login via a browser for more information.</string>
    <string name="BannedMessageTemporary">You have been temporarily banned from SKYBLOX. Please login via a browser for more information.</string>
    <string name="BannedModeratorNote">Moderator Note: %s</string>
    <string name="BannedReviewed">Reviewed: %s</string>
    <string name="BannedTitle">Account Unavailable</string>
    <string name="BannedWarning">Warning</string>
    <string name="BannedWarningInstructions">You must login at &lt;a href=\"http://www.skyblox.co\">www.skyblox.co&lt;/a> to re-activate your account.</string>
    <string name="BirthdayInvalid">Your birthday appears to be incorrect.</string>
    <string name="BirthdayRequirements">Select Your Birthday</string>
    <string name="BirthdayWord">Birthday</string>
    <string name="BuildWord">Build</string>
    <string name="BuildersClubWord">Builders Club</string>
    <string name="CancelWord">Cancel</string>
    <string name="CannotMakePurchase">We are sorry, you cannot make purchases at this time. If this problem persists contact info@skyblox.co</string>
    <string name="CannotPurchaseBecauseParentalControl">You are not able to make purchases. Check your parental control settings and try again later.</string>
    <string name="CatalogWord">Catalog</string>
    <string name="ChangeEmailCurrentPassword">Current Password</string>
    <string name="ChangeEmailNewEmail">New Email</string>
    <string name="ChangeEmailNewEmailUnder13">"New Parent's Email"</string>
    <string name="ChangeEmailShort">Change Email</string>
    <string name="ChangeEmailShortUnder13">"Change Parent's Email"</string>
    <string name="ChangePasswordConfirmPassword">Confirm New Password</string>
    <string name="ChangePasswordNewPassword">New Password</string>
    <string name="ChangePasswordOldPassword">Old Password</string>
    <string name="ChooseOne">Choose one</string>
    <string name="ClearCookiesWord">Clear Cookies</string>
    <string name="CloseWord">Close</string>
    <string name="CommunityWord">Community</string>
    <string name="ConnectionError">SKYBLOX requires Internet connection</string>
    <string name="ConnectionErrorGameEnded">Cannot join this game because it has ended.</string>
    <string name="ConnectionErrorGameFull">Cannot join this game because it is full.</string>
    <string name="CookiesClearedMessage">Skyblox Cookies are cleared</string>
    <string name="CrashFound">The game did not end correctly. You may need a Software Update. See the Settings section About Device.</string>
    <string name="DefaultDeviceBlacklist">XT1080,Nexus 7,SMÃ‚Â¬?-T210R,SM-T320</string>
    <string name="DismissButtonText">Dismiss</string>
    <string name="DoneWord">Done</string>
    <string name="EmailInvalid">Your email address appears to be invalid.</string>
    <string name="EmailRequirements">(optional)</string>
    <string name="EmailRequirementsUnder13">"Parent's Email"</string>
    <string name="EmailWord">Email</string>
    <string name="EndingGame">Game Closing</string>
    <string name="EnterHerePhrase">Enter Here</string>
    <string name="EntryIncorrectBody">One or more of the fields are incorrect or empty.</string>
    <string name="EntryIncorrectTitle">Please Check Entries</string>
    <string name="FieldsIncomplete">Not all required fields are filled</string>
    <string name="FriendsWord">Friends</string>
    <string name="GameStartFailureDisabled">Sorry! This game is disabled. Please join another game.</string>
    <string name="GameStartFailureError">Sorry! This game failed to start. Please try joining another game.</string>
    <string name="GameStartFailureGameEnded">Sorry! This game has already ended.</string>
    <string name="GameStartFailureGameFull">Sorry! This game is already full.</string>
    <string name="GameStartFailureRestricted">Sorry! This game is unavailable on this platform.</string>
    <string name="GameStartFailureUnknown">Sorry! The game failed to start for an unexpected reason.</string>
    <string name="GameStartFailureUserLeft">Sorry! The user you were following has left the game.</string>
    <string name="GameWord">Games</string>
    <string name="GenderBoy">Boy</string>
    <string name="GenderGirl">Girl</string>
    <string name="GenderWord">Gender</string>
    <string name="GeneralGameStartError">There was an error starting this game.</string>
    <string name="GoogleAdTagUrl" formatted="false">http://pubads.g.doubleclick.net/gampad/ads?sz=400x300&amp;iu=%2F6062%2Fhanna_MA_group%2Fvideo_comp_app&amp;ciu_szs=&amp;impl=s&amp;gdfp_req=1&amp;env=vp&amp;output=xml_vast2&amp;unviewed_position_start=1&amp;m_ast=vast&amp;url=[referrer_url]&amp;correlator=[timestamp]</string>
    <string name="GroupsWord">Groups</string>
    <string name="HavePendingTransactionError">You already have pending transactions, please try again after some time. You may need to restart your device. If this problem persists contact info@skyblox.co</string>
    <string name="HomeWord">Home</string>
    <string name="IgnoreButtonText">Ignore</string>
    <string name="InvalidCharactersUsed">Invalid characters used</string>
    <string name="InvalidUsernameOrPw">Invalid username or password</string>
    <string name="InventoryWord">Inventory</string>
    <string name="LaunchGame">Launching Game</string>
    <string name="LeaderboardsWord">Leaderboards</string>
    <string name="LegalText">"SKYBLOX, 'Online Building Toy', characters, logos, names, and all related indicia are trademarks of SKYBLOX Corporation ©2015. US Patents 7,874,921. Patents pending. Contact us at info@skyblox.co"</string>
    <string name="LicensingAgreement">Licensing Agreement</string>
    <string name="LoggedOut">You have been logged out.</string>
    <string name="LoggingIn">Logging In</string>
    <string name="LoginButton">Login</string>
    <string name="LoginFailedTitle">Login Failed - %s</string>
    <string name="LoginWord">Login</string>
    <string name="LogoutConfirmation">Do you want to log out?</string>
    <string name="LogoutWord">Logout</string>
    <string name="MemoryError">"We're sorry, this place uses too many parts for your device"</string>
    <string name="MessagesWord">Messages</string>
    <string name="MessagesWordPhone">MSGs</string>
    <string name="MoreWord">More</string>
    <string name="NeedsExternalLogin">Your user account has issues, please try logging in using Chrome or any other browser.</string>
    <string name="NextWord">Next</string>
    <string name="NoSignupBirthdayError">No birthday specified, please select a birthday.</string>
    <string name="NoSignupGenderError">No gender specified, please select a gender.</string>
    <string name="NoSignupPasswordError">No password specified, please enter a password.</string>
    <string name="NoSignupUsernameError">No username was entered, please enter a username.</string>
    <string name="NoSignupVerifyPasswordError">"Password was not verified, please enter password in 'Verify' field."</string>
    <string name="OkWord">Ok</string>
    <string name="PairWord">Pair</string>
    <string name="PasswordNoMatch">Passwords do not match. Please retype your password.</string>
    <string name="PasswordRequirements">6-20 characters with at least 2 numbers</string>
    <string name="PasswordRequirementsShort">6-20 characters</string>
    <string name="PasswordTooLong">Password is too long. Please use a password that is less than 20.</string>
    <string name="PasswordTooShort">Password is too short. Please use a password that is longer than 4 characters.</string>
    <string name="PasswordWord">Password</string>
    <string name="PasswordWrongAndroid">Password must contain 6-20 characters with at least 2 numbers.</string>
    <string name="PlayNowButtonLabel">Play Now</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="ProfileWord">Profile</string>
    <string name="PurchaseSuccessful">Purchase successful, it may take up to 5 minutes to be reflected in your account</string>
    <string name="PurchaseValidateError">Sorry, your transaction cannot be completed.</string>
    <string name="PurchaseValidateLimit">Sorry, your transaction cannot be completed at this time, as you have reached a transaction limit.</string>
    <string name="PurchaseValidateRetry">Billing service is currently unavailable. Please try again later.</string>
    <string name="PurchasedFailed">Purchase failed, please try again</string>
    <string name="RateMeDialogMessage">We would really appreciate you rating SKYBLOX on the Play store.</string>
    <string name="RateMeDialogTitle">Please rate this app</string>
    <string name="RateMeNever">Never</string>
    <string name="RateMeNotNow">Not now</string>
    <string name="RateMeRateIt">Rate it</string>
    <string name="RatingNoThanksButton">No, Thanks</string>
    <string name="RatingRemindMeLaterButton">Remind me later</string>
    <string name="RatingString">If you enjoy using SKYBLOX, would you please rate it? It wont take more than a minute. If you are having issues or problems, please email support at support@skyblox.co.</string>
    <string name="RatingTitle">Rate SKYBLOX</string>
    <string name="SelectBirthday">Select Birthday</string>
    <string name="SettingsChangeEmail">Change Email Address</string>
    <string name="SignupWord">Sign Up</string>
    <string name="UsernameRequirements">3-20 alphanumeric characters, no spaces</string>
    <string name="UsernameRequirementsShort">3-20 characters</string>
    <string name="UsernameWord">Username</string>
    <string name="VerifyRequirements">Retype Password</string>
    <string name="VerifyWord">Verify</string>
    <string name="empty" />
    <string name="lorem_ipsum">Lorem ipsum dolor</string>
    <string name="lorem_ipsum_xl">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
</resources>