<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/fragment_change_email_background" android:background="@color/shell_dialog_background" android:layout_width="700.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/fragment_change_email_header" android:background="@color/shell_dialog_bar" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="700.0dip" android:layout_height="wrap_content">
        <TextView android:textSize="20.0sp" android:textColor="@color/shell_text_link" android:id="@id/tvSettingsClose" android:paddingLeft="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/CloseWord" android:layout_weight="1.0" />
        <TextView android:textSize="18.0sp" android:textColor="@color/shell_text_normal" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/change_email_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/SettingsChangeEmail" android:singleLine="true" android:layout_weight="1.0" />
        <TextView android:textSize="20.0sp" android:textColor="@color/shell_dialog_bar" android:id="@id/spacer" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/CancelWord" android:layout_weight="1.0" />
    </LinearLayout>
    <TableLayout android:id="@id/fragment_change_email_table" android:paddingLeft="50.0dip" android:paddingTop="25.0dip" android:paddingBottom="50.0dip" android:layout_width="700.0dip" android:layout_height="fill_parent">
        <TableRow android:id="@id/fragment_change_email_current_password_row" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="20.0sp" android:textColor="@color/black" android:layout_gravity="right" android:id="@id/change_email_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ChangeEmailNewEmail" android:layout_weight="3.0" />
            <EditText android:textSize="20.0sp" android:layout_gravity="center_vertical" android:id="@id/textNewEmail" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="-7.0dip" android:layout_marginRight="50.0dip" android:ems="10" android:layout_weight="7.0" android:inputType="textEmailAddress" android:textIsSelectable="true" style="@style/LoginEditTextTheme" />
        </TableRow>
        <TableRow android:id="@id/fragment_change_password_new_email_row" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="20.0sp" android:textColor="@color/black" android:layout_gravity="right" android:id="@id/textView5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ChangeEmailCurrentPassword" android:layout_weight="3.0" />
            <EditText android:textSize="20.0sp" android:layout_gravity="center_vertical" android:id="@id/textCurrentPassword" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="-7.0dip" android:layout_marginRight="50.0dip" android:ems="10" android:layout_weight="7.0" android:inputType="textPassword" android:textIsSelectable="true" style="@style/LoginEditTextTheme" />
        </TableRow>
        <Button android:textSize="25.0sp" android:id="@id/btnChangeEmail" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="150.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="150.0dip" android:text="@string/ChangeEmailShort" style="@style/LoginButtonTheme" />
    </TableLayout>
</LinearLayout>
